--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -371,7 +371,7 @@
 <!-- footer 區 end -->
 
 <!-- loading 圖示 start  -->
-<div class="load-bgc ">
+<div class="load-bgc hide">
   <div class="load-item ">
     <div class="load-pic">
       <img src="/static/css/icon/colorbook-load.png" class="book-p">
