--- a/src/main/resources/templates/bookland_home.html
+++ b/src/main/resources/templates/bookland_home.html
@@ -132,8 +132,8 @@
             <a class="nav-link " href="about.html">ABOUT</a>
           </li>
         </ul>
-        <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="search" placeholder="Key Words" aria-label="Search">
+        <form class="form-inline my-2 my-lg-0" action="/search">
+          <input class="form-control mr-sm-2" name="keyword" type="text" placeholder="Key Words" aria-label="Search">
           <button class="btn btn-search btn-outline-success my-2 my-sm-0" type="submit">Search</button>
         </form>
       </div>
@@ -407,9 +407,11 @@
           內容的新報紙，總計收錄了200件海報，讀者們可一探究竟當時新藝術風的盛行。</p>
         <h6>NT 1190</h6>
         <div class="orderbook">
-          <button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="top" title="訂購時間約3個月">
+          <a href="message.html">
+            <button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="top" title="訂購時間約3個月">
             預訂
           </button>
+        </a>
         </div>
       </div>
     </div>
@@ -428,9 +430,11 @@
         <p class="p-txt">西斯萊( Sisley )受到巴比松畫派的影響，用色明亮，景物清晰。他喜歡用橘紅色來描繪陽光普照的景色，連雪景畫和洪水題材的畫作也充滿暖意，以色彩的交響融化了悲劇成分。</p>
         <h6>NT 1390</h6>
         <div class="orderbook">
-          <button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="top" title="訂購時間約3個月">
+          <a href="message.html">
+            <button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="top" title="訂購時間約3個月">
             預訂
           </button>
+        </a>
         </div>
       </div>
     </div>
