--- a/src/main/resources/templates/forgotpass.html
+++ b/src/main/resources/templates/forgotpass.html
@@ -1,205 +1,216 @@
 <!-- 開頭模板區 start -->
 <!doctype html>
 <html lang="en" xmlns:th="https://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
-  <head>
-    <!-- Required meta tags -->
-    <link rel="shortcut icon" type="image/x-icon" href="/static/css/icon/bookico.svg">
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="/static/vendor/bootstrap-4.1.3/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/static/vendor/bootstrap-4.1.3/css/bootstrap-icons.css">
-    <link rel="stylesheet" href="/static/css/model-css.css">
-    <link rel="stylesheet" href="/static/css/newpass.css">
-   
-    <title>BookLand Bookshop</title>
-  </head>
-  
-  <body>
-    <!-- logo & icon區 start -->
-    <header>
-        <div class="jumbotron jumbotron-fluid">
-            <div class="container-fluid">
-              <div>
-                <a href="/"><img src="/static/css/icon/booklogo.svg" width="70px" class="logo"></a>
-              </div>
-              <div class="icon-3 order-num">
-                <li sec:authorize="${isAuthenticated()}" class="user-none">
-                  <a href="javascript:void(0);">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
-                      <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
-                      <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
-                    </svg>
-                    <p sec:authentication="name"></p>
-                </a>
-                <ul class="list-group hide">
-                  <li class="list-group-item "><a href="account.html">帳戶資訊</a></li>
-                  <li class="list-group-item"><a href="newpass.html">更改密碼</a></li>
-                  <li class="list-group-item"><a href="/logout">登出</a></li>
-                </ul>
-              </li>
-                <li sec:authorize="${!isAuthenticated()}" class="login-none">
-                  <a href="/login">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="25" fill="currentColor" class="bi bi-door-closed" viewBox="0 0 16 16">
-                      <path d="M3 2a1 1 0 0 1 1-1h8a1 1 0 0 1 1 1v13h1.5a.5.5 0 0 1 0 1h-13a.5.5 0 0 1 0-1H3V2zm1 13h8V2H4v13z"/>
-                      <path d="M9 9a1 1 0 1 0 2 0 1 1 0 0 0-2 0z"/>
-                    </svg>
-                  </a>
-                </li>
-                <li>
-                  <p class="order-number">0</p>
-                  <a href="cart.html">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
-                      <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
-                    </svg>
-                  </a>
-                </li>
-                <li><a href="message.html">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-chat-dots-fill" viewBox="0 0 16 16">
-                    <path d="M16 8c0 3.866-3.582 7-8 7a9.06 9.06 0 0 1-2.347-.306c-.584.296-1.925.864-4.181 1.234-.2.032-.352-.176-.273-.362.354-.836.674-1.95.77-2.966C.744 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7zM5 8a1 1 0 1 0-2 0 1 1 0 0 0 2 0zm4 0a1 1 0 1 0-2 0 1 1 0 0 0 2 0zm3 1a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
-                  </svg>
-                </a>
-              </li>
-              </div>
-              </ul>
-            </div>
-          </div>
-    </header>  
+<head>
+  <!-- Required meta tags -->
+  <link rel="shortcut icon" type="image/x-icon" href="/static/css/icon/bookico.svg">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="/static/vendor/bootstrap-4.1.3/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/static/vendor/bootstrap-4.1.3/css/bootstrap-icons.css">
+  <link rel="stylesheet" href="/static/css/model-css.css">
+  <link rel="stylesheet" href="/static/css/newpass.css">
+
+  <title>BookLand Bookshop</title>
+</head>
+
+<body>
+  <!-- logo & icon區 start -->
+  <header>
+    <div class="jumbotron jumbotron-fluid">
+      <div class="container-fluid">
+        <div>
+          <a href="/"><img src="/static/css/icon/booklogo.svg" width="70px" class="logo"></a>
+        </div>
+        <div class="icon-3 order-num">
+          <li sec:authorize="${isAuthenticated()}" class="user-none">
+            <a href="javascript:void(0);">
+              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
+                class="bi bi-person-circle" viewBox="0 0 16 16">
+                <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z" />
+                <path fill-rule="evenodd"
+                  d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z" />
+              </svg>
+              <p sec:authentication="name"></p>
+            </a>
+            <ul class="list-group hide">
+              <li class="list-group-item "><a href="/account">帳戶資訊</a></li>
+              <li class="list-group-item"><a href="newpass.html">更改密碼</a></li>
+              <li class="list-group-item"><a href="/logout">登出</a></li>
+            </ul>
+          </li>
+          <li sec:authorize="${!isAuthenticated()}" class="login-none">
+            <a href="/login">
+              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="25" fill="currentColor"
+                class="bi bi-door-closed" viewBox="0 0 16 16">
+                <path
+                  d="M3 2a1 1 0 0 1 1-1h8a1 1 0 0 1 1 1v13h1.5a.5.5 0 0 1 0 1h-13a.5.5 0 0 1 0-1H3V2zm1 13h8V2H4v13z" />
+                <path d="M9 9a1 1 0 1 0 2 0 1 1 0 0 0-2 0z" />
+              </svg>
+            </a>
+          </li>
+          <li class="list-cart">
+            <p th:each="cookie:${#httpServletRequest.getCookies()}" th:if="${cookie.getName().equals('cart')}"
+              th:class="'order-number'" th:text="${cookie.getValue().split(',').length}"></p>
+
+            <a href="/cart">
+              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-cart"
+                viewBox="0 0 16 16">
+                <path
+                  d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
+              </svg>
+            </a>
+          </li>
+          <li><a href="message.html">
+              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
+                class="bi bi-chat-dots-fill" viewBox="0 0 16 16">
+                <path
+                  d="M16 8c0 3.866-3.582 7-8 7a9.06 9.06 0 0 1-2.347-.306c-.584.296-1.925.864-4.181 1.234-.2.032-.352-.176-.273-.362.354-.836.674-1.95.77-2.966C.744 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7zM5 8a1 1 0 1 0-2 0 1 1 0 0 0 2 0zm4 0a1 1 0 1 0-2 0 1 1 0 0 0 2 0zm3 1a1 1 0 1 0 0-2 1 1 0 0 0 0 2z" />
+              </svg>
+            </a>
+          </li>
+        </div>
+        </ul>
+      </div>
+    </div>
+  </header>
   <!--logo & icon區 end -->
 
   <!-- 導覽列 start -->
-    <navbar>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <navbar>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
 
-            <button type="button" class="btn btn-line" data-toggle="modal" data-target=".bd-example-modal-sm">
-              <img src="/static/css/icon/colorline.svg" width="40px" class="line"></button>
-            <div class="modal fade bd-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel"
-              aria-hidden="true">
-              <div class="modal-dialog modal-sm">
-                <div class="modal-content">
-                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span class="btn-x" aria-hidden="true">&times;</span>
-                  </button>
-        
-                  <br>
-                  <strong>加 BookLand 好友吧 !</strong><br>
-                  <img src="/static/css/icon/qrcode.png" alt="bookland-qr-code">
-                  <strong style="color:brown">ID : @454avqhn</strong><br>
-                  <p>任何問題都可詢問 BookLand ~<br>
-                    BookLand 會盡快回覆您 ~</p>
-                </div>
-              </div>
-            </div>
-        
-        
-        
-        
-        
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-              aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
+      <button type="button" class="btn btn-line" data-toggle="modal" data-target=".bd-example-modal-sm">
+        <img src="/static/css/icon/colorline.svg" width="40px" class="line"></button>
+      <div class="modal fade bd-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog modal-sm">
+          <div class="modal-content">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span class="btn-x" aria-hidden="true">&times;</span>
             </button>
-        
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                  <a class="nav-link" href="/new">NEW</a>
-                </li>
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                    aria-haspopup="true" aria-expanded="false">
-                    BOOKS
-                  </a>
-                  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="/book/all">全部 All</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="/book/fine-art">美術 Fine Art</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="/book/photography">攝影 Photography</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="/book/poster-design">海報 & 設計 Poster & Design</a>
-                  </div>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="/book/magazine">MAGAZINES</a>
-                </li>
-        
-                <li class="nav-item">
-                  <a class="nav-link " href="about.html">ABOUT</a>
-                </li>
-              </ul>
-              <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Key Words" aria-label="Search" >
-                <button class="btn btn-search btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-              </form>
-            </div>
-          </nav>
-    </navbar>
-     <!-- 導覽列 end -->
-     <!-- 開頭模板區 end -->
 
-     <!-- 忘記密碼 區  start -->
-     <div class="changepass-form">
-        <div class="card border-info mb-3 passform">
-          <div class="card-header">更新密碼</div>
-          <div class="card-body text-info">
-            <form class="loginform">
-              <div class="form-group">
-                <label for="exampleInputPassword1">新密碼</label>
-                <div class="inputerror">
-                  <input type="password" class="form-control is-invalid" id="newpassword1" placeholder="New Password">
-                  <small id="passworderror" class="form-text text-muted">* 密碼至少8個字符</small>
-                </div>
-                <br>
-                <label for="exampleInputPassword1">確認密碼</label>
-                <div class="inputerror">
-                  <input type="password" class="form-control is-invalid" id="newpassword2" placeholder="Confirm Password">
-                  <small id="passworderror" class="form-text text-muted">* 再輸入一次密碼</small>
-                </div>
-              </div>
-              <div class="new-btn">
-                <button type="button" class="btn btn-secondary btn-block newpass-btn">更新</button>
-              </div>
-            </form>
+            <br>
+            <strong>加 BookLand 好友吧 !</strong><br>
+            <img src="/static/css/icon/qrcode.png" alt="bookland-qr-code">
+            <strong style="color:brown">ID : @454avqhn</strong><br>
+            <p>任何問題都可詢問 BookLand ~<br>
+              BookLand 會盡快回覆您 ~</p>
           </div>
         </div>
       </div>
-     <!-- 忘記密碼 區  end -->
 
-     <!-- footer 區 start -->
-    <footer>
-      <div class="co">
-        <span>Copyright &copy; 2021 <a class="backhome" href="/"><strong>BookLand</strong></a> </span>
+
+
+
+
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="/new">NEW</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">
+              BOOKS
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="/book/all">全部 All</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="/book/fine-art">美術 Fine Art</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="/book/photography">攝影 Photography</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="/book/poster-design">海報 & 設計 Poster & Design</a>
+            </div>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/book/magazine">MAGAZINES</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link " href="about.html">ABOUT</a>
+          </li>
+        </ul>
+        <form class="form-inline my-2 my-lg-0" action="/search">
+          <input class="form-control mr-sm-2" name="keyword" type="text" placeholder="Key Words" aria-label="Search">
+          <button class="btn btn-search btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form>
       </div>
-    </footer>  
-    <!-- footer 區 end -->
+    </nav>
+  </navbar>
+  <!-- 導覽列 end -->
+  <!-- 開頭模板區 end -->
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="/static/vendor/jquery/jquery-3.5.1.min.js"></script>
-    <script src="/static/vendor/bootstrap-4.1.3/js/popper.min.js"></script>
-    <script src="/static/vendor/bootstrap-4.1.3/js/bootstrap.min.js"></script>
-   
-    <!-- 會員帳號管理 icon button -->
-    <script>
-      $('.user-none').hover(function(){
-        $('.hide').toggle();
-      })
-    </script>
+  <!-- 忘記密碼 區  start -->
+  <div class="changepass-form">
+    <div class="card border-info mb-3 passform">
+      <div class="card-header">更新密碼</div>
+      <div class="card-body text-info">
+        <form class="loginform">
+          <div class="form-group">
+            <label for="exampleInputPassword1">新密碼</label>
+            <div class="inputerror">
+              <input type="password" class="form-control is-invalid" id="newpassword1" placeholder="New Password">
+              <small id="passworderror" class="form-text text-muted">* 密碼至少8個字符</small>
+            </div>
+            <br>
+            <label for="exampleInputPassword1">確認密碼</label>
+            <div class="inputerror">
+              <input type="password" class="form-control is-invalid" id="newpassword2" placeholder="Confirm Password">
+              <small id="passworderror" class="form-text text-muted">* 再輸入一次密碼</small>
+            </div>
+          </div>
+          <div class="new-btn">
+            <button type="button" class="btn btn-secondary btn-block newpass-btn">更新</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+  <!-- 忘記密碼 區  end -->
 
-<!-- loading 圖示 start  -->
-<div class="load-bgc hide">
-  <div class="load-item ">
-    <div class="load-pic">
-      <img src="/static/css/icon/colorbook-load.png" class="book-p">
+  <!-- footer 區 start -->
+  <footer>
+    <div class="co">
+      <span>Copyright &copy; 2021 <a class="backhome" href="/"><strong>BookLand</strong></a> </span>
     </div>
-    <div class="load-txt">
-      <small><i class="bi-hourglass-split"></i>&nbsp;Loading ...</small>
+  </footer>
+  <!-- footer 區 end -->
+
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="/static/vendor/jquery/jquery-3.5.1.min.js"></script>
+  <script src="/static/vendor/bootstrap-4.1.3/js/popper.min.js"></script>
+  <script src="/static/vendor/bootstrap-4.1.3/js/bootstrap.min.js"></script>
+
+  <!-- 會員帳號管理 icon button -->
+  <script>
+    $('.user-none').hover(function () {
+      $('.hide').toggle();
+    })
+  </script>
+
+  <!-- loading 圖示 start  -->
+  <div class="load-bgc hide">
+    <div class="load-item ">
+      <div class="load-pic">
+        <img src="/static/css/icon/colorbook-load.png" class="book-p">
+      </div>
+      <div class="load-txt">
+        <small><i class="bi-hourglass-split"></i>&nbsp;Loading ...</small>
+      </div>
     </div>
-  </div> 
-</div>
-<!-- loading 圖示 end  -->
+  </div>
+  <!-- loading 圖示 end  -->
 
 </body>
 
